<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="22dp"
        android:gravity="center"
        android:text="@string/login_title"
        android:textSize="33dp" />

    <EditText
        android:id="@+id/username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/username"
        android:padding="22dp"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="22dp"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/error_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/login_error"
        android:textColor="#E91E63"
        android:visibility="invisible" />


</LinearLayout>